// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App should render all the time equally with data 1`] = `
<div>
  <div>
    <h1>
      First Airline: 
      "Aer Lingus"
    </h1>
  </div>
</div>
`;

exports[`App should render all the time equally without data 1`] = `
<div>
  <div>
    <h1>
      First Airline: 
      none
    </h1>
  </div>
</div>
`;
